syntax = "proto3";

message TestData {
  int64 field1 = 1;
  int64 field2 = 2;
  int64 field3 = 3;
  int64 field4 = 4;
  int64 field5 = 5;
  int64 field6 = 6;
  int64 field7 = 7;
  int64 field8 = 8;
  int64 field9 = 9;
  int64 field10 = 10;
}